# rust-graphql-example

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  env
app/: .env  Cargo.toml
app/migrations/2020-05-30-153234_initial_setup/: down.sql  up.sql
app/migrations/2020-05-30-153432_basic_user_roles/: down.sql  up.sql
app/src/: main.rs  schema.patch  schema.rs
app/src/db/: mod.rs  mysql.rs  redis.rs
app/src/errors/: mod.rs
app/src/graphql/: context.rs  mod.rs
app/src/graphql/dataloaders/: external_user_provider.rs  mod.rs
app/src/graphql/guards/: mod.rs
app/src/graphql/input/: user.rs
app/src/graphql/interfaces/: node.rs
app/src/graphql/mutation/: mod.rs  user.rs
app/src/graphql/objects/: external_user_provider.rs  mod.rs  user.rs
app/src/graphql/query/: mod.rs  user.rs
app/src/graphql/subscription/: mod.rs
app/src/graphql/utils/: api_version.rs  authorization.rs  mod.rs
app/src/models/: external_user_provider.rs  mod.rs  user.rs  user_token.rs
app/src/models/auth/: auth_assignment.rs  auth_item.rs  auth_item_child.rs  mod.rs
app/src/models/utils/: pagination.rs
app/src/utils/: argon.rs  env.rs  mod.rs
app/src/web_utils/: handlers.rs  jwt.rs  mod.rs
docker/: env.tmpl  start.sh
mocking-data/: index.js  package.json
